--- a/src/app/modules/reports/reports/reports.component.html
+++ b/src/app/modules/reports/reports/reports.component.html
@@ -492,6 +492,23 @@
             </mat-card>
         </div>
 
+        <div *ngIf="IsReportCardVisable('reports/zone-branch-wise-recovery-report')" class="col-lg-4 col-sm-12 mt-5">
+            <mat-card class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg"
+                      id="llcInquiryText"
+                      routerLink="zone-branch-wise-recovery-report">
+
+                <div class="d-grid" style="justify-items: center;">
+                    <img class="img-responsive center-block w-12 mx-auto mb-3"
+                         src="../../../../assets/images/reports.png">
+
+
+                    <p class=" text-black"
+                    >Zone Branch Wise Recovery Report</p>
+                </div>
+
+            </mat-card>
+        </div>
+
 
     </div>
 
