--- a/src/app/modules/reports/zone-branch-wise-recovery-report/zone-branch-wise-recovery-report.component.html
+++ b/src/app/modules/reports/zone-branch-wise-recovery-report/zone-branch-wise-recovery-report.component.html
@@ -23,7 +23,7 @@
 
     <div id="Kt-portlet-margin-top">
         <div class="collapse show" id="collapseExample">
-            <div class="card card-body">
+            <div class="mt-4">
 <!--                <form [formGroup]="bufricationForm" class="kt-form kt-form&#45;&#45;group-seperator-dashed">-->
 
 <!--                    <div class="kt-form">-->
@@ -77,39 +77,296 @@
 
 
 <!--                </form>-->
+                <div class="col-lg-12">
+                    <div class="col-lg-9 col-sm-12">
+                        <div class="heading">General Recovery</div>
+                    </div>
+
+                    <div  class="col-lg-12 p-0 border shadow-xs rounded-sm bg-gray-50 mt-2 mb-2">
+
+                        <table class="table table-striped">
+                            <thead>
+                            <tr class="table-header-background">
+                                <th colspan="2">Daily Recovery</th>
+                                <th></th>
+                                <th colspan="2">Monthly Recovery</th>
+                                <th></th>
+                                <th colspan="3">Progressive Recovery {{currentYear}}</th>
+                                <th></th>
+                            </tr>
+
+                            <tr class="table-header-background">
+                                <th>{{currentYear}}</th>
+                                <th>{{lastYear}}</th>
+                                <th>INC/DEC</th>
+                                <th>{{currentYear}}</th>
+                                <th>{{lastYear}}</th>
+                                <th>INC/DEC</th>
+                                <th>O/S</th>
+                                <th>R.able</th>
+                                <th>Recovery</th>
+                                <th>%AGE</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            </tbody>
+                        </table>
+
+                    </div>
+
+                    <div  class="col-lg-12 p-0 border shadow-xs rounded-sm bg-gray-50 mt-2 mb-2">
+
+                        <table class="table table-striped">
+                            <thead>
+                            <tr class="table-header-background">
+                                <th colspan="3">Progressive Recovery {{lastYear}}</th>
+                                <th></th>
+                                <th>INC/DEC</th>
+                                <th></th>
+                                <th colspan="2">Mark-up Recovery</th>
+                                <th></th>
+                            </tr>
+
+                            <tr class="table-header-background">
+                                <th>O/S</th>
+                                <th>R.able</th>
+                                <th>Recovery</th>
+                                <th>%AGE</th>
+                                <th>Amount</th>
+                                <th>%AGE</th>
+                                <th>{{currentYear}}</th>
+                                <th>{{lastYear}}</th>
+                                <th>INC/DEC</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            </tbody>
+                        </table>
+
+                    </div>
+
+                </div>
+
+                <div class="col-lg-12">
+                    <div class="col-lg-9 col-sm-12">
+                        <div class="heading">NPLs</div>
+                    </div>
+
+                    <div class="col-lg-12 p-0  border shadow-xs rounded-sm bg-gray-50 mt-2 mb-2">
+
+                        <table class="table table-striped">
+                            <thead>
+                            <tr class="table-header-background">
+                                <th>Category</th>
+                                <th colspan="4">NPLs TOTAL</th>
+                            </tr>
+
+                            <tr class="table-header-background">
+                                <th rowspan="2"></th>
+                                <th colspan="2">NPLs {{currentYear}}</th>
+                                <th colspan="2">NPLs {{lastYear}}</th>
+                            </tr>
+
+                            <tr class="table-header-background">
+                                <th>Amount</th>
+                                <th>%Age with Total</th>
+                                <th>Amount</th>
+                                <th>%Age with Total</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr>
+                                <td>OAEM</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>Substandard</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>Doubtful</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>Loss</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>Total</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+
+                    <div class="col-lg-12 p-0  border shadow-xs rounded-sm bg-gray-50 mt-2 mb-2">
+                        <table class="table table-striped">
+                            <thead>
+
+                            <tr class="table-header-background">
+                                <th>NPLs INC/DEC</th>
+                                <th>Outstanding</th>
+                                <th>Ratio with O/S</th>
+                                <th>Outstanding</th>
+                                <th>Ratio with O/S</th>
+                                <th>RATIO INC/DEC</th>
+                                <th>Daily Reduction in NPLs</th>
+                                <th>Daily Reduction in Provision</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+
+                </div>
+
+
+                <div class="col-lg-12">
+                    <div class="col-lg-9 col-sm-12">
+                        <div class="heading">Sam Recovery</div>
+                    </div>
+
+                    <div class="col-lg-12 p-0  border shadow-xs rounded-sm bg-gray-50 mt-2 mb-2">
+                        <table class="table table-striped">
+                            <thead>
+                            <tr class="table-header-background">
+                                <th colspan="2">Daily Recovery</th>
+                                <th></th>
+                                <th colspan="2">Monthly Recovery</th>
+                                <th></th>
+                                <th colspan="3">Progressive Recovery {{currentYear}}</th>
+                            </tr>
+
+                            <tr class="table-header-background">
+                                <th>{{currentYear}}</th>
+                                <th>{{lastYear}}</th>
+                                <th>INC/DEC</th>
+                                <th>{{currentYear}}</th>
+                                <th>{{lastYear}}</th>
+                                <th>INC/DEC</th>
+                                <th>OUTSTANDING</th>
+                                <th>RECOVERY</th>
+                                <th>%AGE</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+
+                    <div class="col-lg-12 p-0  border shadow-xs rounded-sm bg-gray-50 mt-2 mb-2">
+                        <table class="table table-striped">
+                            <thead>
+                            <tr class="table-header-background">
+                                <th colspan="3">Progressive Recovery {{lastYear}}</th>
+                                <th colspan="2">INC/DEC</th>
+                                <th colspan="2">SAM ADDITION</th>
+                                <th></th>
+                            </tr>
+
+                            <tr class="table-header-background">
+                                <th>OUTSTANDING</th>
+                                <th>RECOVERY</th>
+                                <th>%AGE</th>
+                                <th>Amount</th>
+                                <th>%AGE</th>
+                                <th>{{currentYear}}</th>
+                                <th>{{lastYear}}</th>
+                                <th>INC/DEC</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+
+                </div>
+
+                <div class="row mt-2 mr-1">
+                    <div class="col-lg-12 text-right">
+                        <button (click)="printReport()"
+                                class="mr-2 bg-green" color="primary" mat-raised-button
+                                type="button">
+                            <mat-icon class="mr-2">print</mat-icon>
+                            Print
+                        </button>
+                    </div>
+                </div>
+
             </div>
+
         </div>
 
-
-    </div>
-
-    <div class="col-lg-12">
-        <div class="col-lg-9 col-sm-12">
-            <div class="heading">General Recovery</div>
-        </div>
-        <table class="table table-striped ">
-            <thead>
-            <tr class="table-header-background">
-                <th colspan="3">Daily Recovery</th>
-                <th colspan="3">Monthly Recovery</th>
-                <th colspan="3">Progressive Recovery {{currentYear}}</th>
-                <th></th>
-                <th colspan="3">Progressive Recovery {{lastYear}}</th>
-                <th></th>
-                <th>INC/DEC</th>
-                <th></th>
-                <th colspan="2">Mark-up Recovery</th>
-                <th></th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr>
-<!--                <td>{{bookletDetail.CustomerName}}</td>-->
-<!--                <td>{{bookletDetail.FatherName}}</td>-->
-<!--                <td>{{bookletDetail.CellNo}}</td>-->
-<!--                <td>{{bookletDetail.Address}}</td>-->
-            </tbody>
-        </table>
     </div>
 
 
