--- a/src/app/modules/dashboard/president-ztbl/president-ztbl.component.html
+++ b/src/app/modules/dashboard/president-ztbl/president-ztbl.component.html
@@ -141,7 +141,7 @@
                 </div>
 
                 <div class="col-lg-6 table-responsive">
-                    <p class="heading mb-2 text-lg">Country Top 5 Zone (Minimum NPL + SAM)</p>
+                    <p class="heading mb-2 text-lg">Country Top {{CountryTop5.length}} Zone (Minimum NPL + SAM)</p>
                     <table class="table  table-striped">
                         <thead>
                         <tr class="table-header-background">
