--- a/src/app/modules/dashboard/president-ztbl/president-ztbl.component.html
+++ b/src/app/modules/dashboard/president-ztbl/president-ztbl.component.html
@@ -121,11 +121,11 @@
             <div class="row">
 
                 <div class="col-lg-6 table-responsive">
-                    <p class="heading mb-2 text-lg">Country Top 5 Worst Zones (Maximum NPL + SAM)</p>
+                    <p class="heading mb-2 text-lg">Country Top {{CountryWorst5?.length}} Worst Zones (Maximum NPL + SAM)</p>
                     <table class="table  table-striped">
                         <thead>
                         <tr class="table-header-background">
-                            <th scope="col">SrNO</th>
+                            <th scope="col">S#</th>
                             <th scope="col">Name</th>
                             <th scope="col">Amount</th>
                         </tr>
@@ -141,11 +141,11 @@
                 </div>
 
                 <div class="col-lg-6 table-responsive">
-                    <p class="heading mb-2 text-lg">Country Top {{CountryTop5.length}} Zone (Minimum NPL + SAM)</p>
+                    <p class="heading mb-2 text-lg">Country Top {{CountryTop5?.length}} Zone (Minimum NPL + SAM)</p>
                     <table class="table  table-striped">
                         <thead>
                         <tr class="table-header-background">
-                            <th scope="col">Sr.#</th>
+                            <th scope="col">S#</th>
                             <th scope="col">Name</th>
                             <th scope="col">Amount</th>
                         </tr>
